package dev.daanh.zombie.domain.survivor.enums;

public enum BodyPartType {
    HEAD, NECK, LEFT_ARM, RIGHT_ARM, UPPER_TORSO, LOWER_TORSO, LEFT_LEG, RIGHT_LEG, SYSTEMIC
}
