package dev.daanh.zombie.domain.survivor.enums;

public enum ConditionType {
    EXHAUSTION, DEHYDRATION, STARVATION, HYPOTHERMIA, POISONING, FEVER, SHOCK, PANIC, SLEEP_DEPRIVATION
}
