package dev.daanh.zombie.domain.survivor.enums;

public enum GenderType {
    MALE, FEMALE
}
