package dev.daanh.zombie.domain.survivor.enums;

public enum GovernmentType {
    ANARCHY, AUTOCRACY, OLIGARCHY, DEMOCRACY
}
