package dev.daanh.zombie.domain.survivor.enums;

public enum GroupRole {
    LEADER, SCAVENGER, SOLDIER, FARMER, DOCTOR, UNASSIGNED
}
