package dev.daanh.zombie.domain.survivor.enums;

public enum InfectionType {
    BACTERIAL, FUNGAL, FOOD_POISONING, CHOLERA, ZOMBIE_VIRUS
}
