package dev.daanh.zombie.domain.survivor.enums;

public enum OccupationType {
    UNEMPLOYED, DOCTOR, POLICE_OFFICER, SOLDIER, ENGINEER, FARMER, ATHLETE, THIEF, POLITICIAN
}
