package dev.daanh.zombie.domain.survivor.enums;

public enum
TraitType {
    BRAVE, COWARD, PRAGMATIC, DEPRESSIVE, LONER, SOCIAL
}
