package dev.daanh.zombie.domain.survivor.enums;

public enum WoundType {
    SCRATCH, LACERATION, BITE, PUNCTURE, GUNSHOT, BURN, FRACTURE
}
